test/instance-checks-4.ktn
def example (Int a -> a a) { }
